# graphrag-rust

./: BENCHMARK.md  Cargo.toml  README.md  benchmark_results.json  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: cache.rs  config.rs  main.rs  metrics.rs  request_id.rs  retry.rs
crates/communities/: Cargo.toml
crates/communities/src/: graph_export.rs  lib.rs  louvain.rs  summarizer.rs
crates/eval/: Cargo.toml
crates/eval/src/: benchmark.rs  lib.rs  plots.rs  test_set.rs  vanilla_rag.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs  llm.rs  normalizer.rs  prompt.rs  schema.rs
crates/index/: Cargo.toml
crates/index/src/: embeddings.rs  lib.rs  neo4j_index.rs  qdrant_index.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: chunk.rs  chunker.rs  lib.rs  reader.rs
crates/query/: Cargo.toml
crates/query/src/: global_search.rs  lib.rs  llm.rs  local_search.rs
data/communities/: community_0.json  community_1.json  community_10.json  community_2.json  community_3.json  community_4.json  community_5.json  community_6.json  community_7.json  community_8.json  community_9.json
data/input/: knowledge_base.md  test.md
