[workspace]
members = [
    "crates/ingest",
    "crates/extract",
    "crates/index",
    "crates/communities",
    "crates/query",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"