[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# API framework (Axum - easier to learn)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database clients
qdrant-client = "1.7"
neo4rs = "0.7"
reqwest = "0.12"

# Other crates (implement these later)
ingest = { path = "../ingest" }
extract = { path = "../extract" }
index = { path = "../index" }
communities = { path = "../communities" }
query = { path = "../query" }