[package]
name = "communities"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Neo4j for graph operations
neo4rs = "0.7"

# Community detection
petgraph = "0.6"  # Graph algorithms library
rand = "0.8"

# LLM for summaries
reqwest = { version = "0.12", features = ["json"] }

# Reference to other crates
extract = { path = "../extract" }
index = { path = "../index" }