[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# File and text processing
walkdir = "2.4"
unicode-segmentation = "1.11"  # For sentence splitting
sha2 = "0.10"  # For generating stable chunk IDs
hex = "0.4"

# Token counting (rough approximation)
# We'll use a simple word-based estimation: ~1.3 tokens per word