[package]
name = "query"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Database clients
qdrant-client = "1.7"
neo4rs = "0.7"

# LLM and embeddings
reqwest = { version = "0.12", features = ["json"] }

# Reference to other crates
ingest = { path = "../ingest" }
extract = { path = "../extract" }
index = { path = "../index" }
communities = { path = "../communities" }